   <https://github.com/jhy/jsoup/issues/523>

 * Fixed an issue when resolving URLs, if the absolute URL had no path, the relative URL was not normalized correctly.
   Also fixed an issue where connections that were redirected to a relative URL did not have the same normalization
   rules as a URL read from Nodes.absUrl(String).
   <https://github.com/jhy/jsoup/issues/585>

*** Release 1.8.2 [2015-Apr-13]
 * Performance improvements for parsing HTML on Android, of 1.5x to 1.9x, with larger parses getting a bigger
   speed increase. For non-Android JREs, around 1.1x to 1.2x.

 * Dramatic performance improvement in HTML serialization on Android (KitKat and later), of 115x. Improvement by working
   around a character set encoding speed regression in Android.
   <https://github.com/jhy/jsoup/issues/383>

 * Performance improvement for the class name selector on Android (.class) of 2.5x to 14x. Around 1.2x
   on non-Android JREs.

 * File upload support. Added the ability to specify input streams for POST data, which will upload content in
   MIME multipart/form-data encoding.

 * Add a meta-charset element to documents when setting the character set, so that the document's charset is
   unambiguous.
   <https://github.com/jhy/jsoup/pull/486>

 * Added ability to disable TLS (SSL) certificate validation. Helpful if you're hitting a host with a bad cert,
   or your JDK doesn't support SNI.
   <https://github.com/jhy/jsoup/pull/343>

 * Added ability to further tweak the canned Cleaner Whitelists by removing existing settings.
   <https://github.com/jhy/jsoup/pull/449>

 * Added option in Cleaner Whitelist to allow linking to in-page anchors (#)
   <https://github.com/jhy/jsoup/pull/441>

 * Use a lowercase doctype tag for HTML5 documents.

 * Add support for 201 Created with redirect, and other status codes. Treats any HTTP status code 2xx or 3xx as an OK
   response, and follow redirects whenever there is a Location header.
   <https://github.com/jhy/jsoup/issues/312>
