@@ -118,7 +118,8 @@ public class Entities {
                             accum.append("&#xa0;");
                         break;
                     case '<':
-                        if (!inAttribute)
+                        // escape when in character data or when in a xml attribue val; not needed in html attr val
+                        if (!inAttribute || escapeMode == EscapeMode.xhtml)
                             accum.append("&lt;");
                         else
                             accum.append(c);
