@@ -28,6 +28,9 @@ jsoup changelog
    rules as a URL read from Nodes.absUrl(String).
    <https://github.com/jhy/jsoup/issues/585>
 
+ * When serialising XML, ensure that '<' characters in attributes are escaped, per spec. Not required in HTML.
+   <https://github.com/jhy/jsoup/issues/528>
+
 *** Release 1.8.2 [2015-Apr-13]
  * Performance improvements for parsing HTML on Android, of 1.5x to 1.9x, with larger parses getting a bigger
    speed increase. For non-Android JREs, around 1.1x to 1.2x.
